RESOLVED FIXED310501
Unreviewed, fix typo in ThreadSafeWeakPtr.h
https://bugs.webkit.org/show_bug.cgi?id=310501
Summary Unreviewed, fix typo in ThreadSafeWeakPtr.h
Chris Dumez
Reported 2026-03-22 18:54:44 PDT
Fix typo in ThreadSafeWeakPtr.h.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-22 18:54:53 PDT
Chris Dumez
Comment 2 2026-03-22 18:55:44 PDT
EWS
Comment 3 2026-03-22 18:57:49 PDT
Committed 309722@main (0e61de510bf9): <https://commits.webkit.org/309722@main> Reviewed commits have been landed. Closing PR #61132 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.