Unreviewed, fix typo in ThreadSafeWeakPtr.h https://bugs.webkit.org/show_bug.cgi?id=310501 rdar://173120675

* Source/WTF/wtf/ThreadSafeWeakPtr.h:
(WTF::ThreadSafeWeakPtrControlBlock::strongDeref const):

Canonical link: https://commits.webkit.org/309722@main